# fb2c

./: .env  .gitignore  Cargo.toml  books.sqbpro
migrations/2020-08-12-064908_setup/: down.sql  up.sql
migrations/2020-08-12-064908_setup/src/lib/: schema.rs
opds/: 0_root.xml  1_authorsindex.xml  2_authorsindex-К.xml  3_authorsindex-Ка.xml  4_authorsindex-Кал.xml  5_authorsindex-Калб.xml  6_authors_Калба.xml  7_author-72206.xml  8_author-72206-alphabet.xml  9-book-582805.fb2.xml
reports/: fb2-000024-030559.list  fb2-000065-572310_lost.list  fb2-030560-060423.list
scripts/: full_load_lib.rus.ec.sh  load_lib.rus.ec.sh
src/: main.rs
src/lib/: database.rs  lib.rs  models.rs  parser.rs  schema.rs  schema_views.rs
src/lib/actions/: author_context.rs  author_mask.rs  book_record.rs  download_context.rs  mod.rs  root_context.rs  title_context.rs
src/lib/models/: archive.rs  author.rs  author_links.rs  book.rs  genre.rs  genre_links.rs  mod.rs  title.rs  title_links.rs
templates/: author.hbs  authors.hbs  find_authors.hbs  query.hbs  root.hbs  title.hbs  titles.hbs
