[package]
name = "fb2c"
version = "0.1.0"
authors = ["seb-odessa <seb@ukr.net>"]
edition = "2018"
build = "build.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    fb2parser = { git = "https://github.com/seb-odessa/fb2parser.git" }
    clap = "*"
    zip = "0.5.6"
    iconv = {git = "https://github.com/andelf/rust-iconv.git" }
