[package]
name = "fb2c"
version = "0.1.0"
authors = ["seb-odessa <seb@ukr.net>"]
edition = "2018"
build = "build.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    fb2parser = { git = "https://github.com/seb-odessa/fb2parser.git" }
    clap = "2.33.2"
    zip = "0.5.6"
    iconv = {git = "https://github.com/andelf/rust-iconv.git" }
    diesel = { version = "1.4.5", features = ["sqlite", "numeric"] }
    dotenv = "0.15.0"
    md5 = "0.7.0"

