[package]
name = "fb2c"
version = "1.0.0"
authors = ["seb-odessa <seb@ukr.net>"]
edition = "2018"
build = "build.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    fb2parser = { git = "https://github.com/seb-odessa/fb2parser.git" }
    clap = "2.33.3"
    zip = "0.5.8"
    iconv = {git = "https://github.com/andelf/rust-iconv.git" }
    diesel = { version = "1.4.5", features = ["sqlite", "r2d2"] }
    dotenv = "0.15.0"
    md5 = "0.7.0"
    actix = "0.10.0"
    actix-web = "3.3.2"
    actix-files = "0.5.0"
    handlebars = { version = "3.5.2", features = ["dir_source"] }
    serde = {version = "1.0.123", features = ["derive"]}
    serde_json = "1.0.61"
    env_logger = "0.8.2"
    log = "0.4.13"
    num-format = "0.4.0"
    sanitize-filename = "0.3.0"


